style(loader): Fix loader missing margin between spinner and text

--- a/src/components/Loader.scss
+++ b/src/components/Loader.scss
@@ -22,6 +22,8 @@ $border-width: 8px;
         height: 64px;
         width: 64px;
 
+        margin-bottom: 16px;
+
         border: $border-width inset $theme-primary;
         border-radius: 100%;
 
